# UV-K1Series_ApeX-Edition_v7.6.0

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  compile-with-docker.sh
.github/: copilot-instructions.md
.github/workflows/: ci-docker-build.yml  main.yml
App/: .swr_cleanup_complete  .swr_cleanup_todo  CMakeLists.txt  README_SWRCLEANUP.txt  REMOVE_SWRCLEANUP.txt  REMOVE_SWRCLEANUP_DELETE_THESE.txt  am_fix.c  am_fix.h  audio.c  audio.h  bitmaps.c  bitmaps.h  board.c  dcs.c  debugging.h  font.c  font.h  frequencies.c  functions.c  init.c  main.c  misc.c  misc.h  radio.c  radio.h  scheduler.c  screenshot.c  screenshot.h  settings.c  settings.h  settings_event.c  settings_event.h  settings_migration.c  settings_migration.h  sram-overlay.c  sram-overlay.h  version.c  vswr.c  vswr.h  vswr_delay.c  (+1 more)
App/app/: action.c  aircopy.c  aircopy.h  app.c  app.h  audio_spectrum.c  audio_spectrum.h  breakout.c  common.c  dtmf.c  dtmf.h  events.c  events.h  events_handlers.c  events_handlers.h  fm.c  generic.c  main.c  menu.c  rega.c  scanner.c  spectrum.c  spectrum.h  uart.c
Core/: CMakeLists.txt
Core/Src/: syscalls.c
Documentation/: ACTION_PLAN.md  ANALYSIS_SUMMARY_MEMO.md  ARCHITECTURE_AUDIT_REPORT.md  AUDIO_SPECTRUM_GUIDE.md  BATTERY_MANAGEMENT_DEEP_STUDY.md  CODEBASE_AUDIT_FINDINGS.md  COMMIT_MESSAGE.txt  COMPILATION_FIXES_SUMMARY.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  DELIVERY_SUMMARY.md  DOCUMENTATION.md  EVENT_SYSTEM_EXAMPLES.md  EVENT_SYSTEM_GUIDE.md  EVENT_SYSTEM_QUICKREF.md  EVENT_SYSTEM_SUMMARY.md  EXECUTIVE_SUMMARY.md  FACEBOOK_RELEASE_POST_v7.6.5br5.md  FEATURE_FLAGS_AND_EEPROM_SCHEMA.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_CHECKLIST.md  MENU_REFACTORING_GUIDE.md  MIGRATION_SAFETY_ANALYSIS.md  MULTI_FIRMWARE_MIGRATION_IMPLEMENTATION.md  OPTIMIZATION_QUICK_REFERENCE.md  Owner's Manual - ApeX Edition.md  Owner_s_Manual_ApeX_Edition_fixed.docx  P0.5_VOLATILE_FLAG_AUDIT.md  PHASE_1_COMPLETION_REPORT.md  PROGRAMMING_TOOLS_GUIDE.md  QUICK_REFERENCE_CARD.md  RADIO_SAFE_EXECUTION_FRAMEWORK.md  README_EVENT_SYSTEM.md  REGA_AM_FM_CONFIGURATION.md  REGRESSION_IMPACT_REPORT.md  RELEASE_NOTES.md  RSSI_DEEP_STUDY.md  SPECTRUM_ANALYZER_ANALYSIS.md  SPECTRUM_ANALYZER_GUIDE.md  STABILITY_IMPROVEMENTS_v7.6.6.md  TECHNICAL_APPENDIX.md  (+12 more)
archive/: index.json
build_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests
cmake/: gcc-arm-none-eabi.cmake
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  adc_stub.c  cmake_install.cmake  dtmf_stub.c  extensive_tests.cpp  spectrum_range_test.py  test_runner.cpp  test_scheduler.cpp  test_st7565.cpp  test_update_flags.cpp
tools/: GITHUB_RELEASE_NOTES_TEMPLATE.md  README.md  RELEASE_PACKAGE_CONTENTS.md  RELEASE_PACKAGING_QUICK_REFERENCE.md  RELEASE_PACKAGING_STANDARD.md  extract_bitmaps_to_png.py  package-release-complete.sh  package-release-docs.sh  quick-release.sh  uvk1k5_apex_chirp_driver.py  uvk1k5_apex_chirp_driver_full.py
(+50 files in other folders)
